# deutsche-bahn-statistics

./: .gitignore  README.md  download_data.sh  generate_html_links.py  pyproject.toml  run_all_calculations.py
.github/workflows/: run-calculations.yml
questions/: about.html  index.html  index.js  style.css  test.ipynb
questions/allgemein/: calculations.py  index.html
questions/allgemein/data/: allgemeine_statistiken.json
questions/bahnhof/: calculations.py  index.html
questions/bahnhof/data/: Bahnhof_Statistiken.json
questions/direkter_zug/: calculations.py  index.html
questions/direkter_zug/data/: direkte_zuege_uebersicht.json
questions/verspaetung_pro_bahnhof/: calculations.py  index.html
questions/verspaetung_pro_bahnhof/data/: Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json  [ICE] Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json  [IC] Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json  [RB] Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json  [RE] Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json  [S] Durchschnittliche Verspätungen an Bahnhöfen und Anzahl an Halten.json
questions/verspaetungsverlauf_zugfahrt/: calculations.py  index.html
questions/zeitraum/: calculations.py  index.html
questions/zuggattung/: calculations.py  index.html  train_type_name_mapping.py
questions/zuggattung/data/: alle_zuggattungen_statistik.json
questions/zuggattungen_pro_bahnhof/: calculations.py  index.html
questions/zugverbindung/: calculations.py  index.html
(+6432 files in other folders)
